--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,6 +6,17 @@
  text-decoration: none;
 }
 
+.btn{
+    cursor: pointer;
+    border-color: #F5F4FA;
+    
+    border-radius: 4px;
+}
+
+.btn:hover{
+    background-color: #2196F3;
+}
+
 .container{
     width: 1600px;
     padding-left: 15px;
@@ -19,6 +30,15 @@
     height: 1360px;
     margin: 0 auto;
     outline: 2px solid red;
+}
+
+.footer-container{
+    width: 1600px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    outline: 2px solid red;
+    background-color: #2F303A;
 }
 
 .header{
@@ -89,11 +109,23 @@
 
 .section{
     margin-top: 94px;
+    
 }
 
 .section-main-list{
     display: flex;
     justify-content: center;
+}
+
+.btn-item{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121; 
 }
 
 .section-list-item{
@@ -108,13 +140,14 @@
 
 .work-item + .work-item{
     margin-left: 30px;
-
 }
 
 .work-item{
-   flex-basis: calc(100% / 3 - 30px);
-   margin-left: 30px;
-   margin-bottom: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
 }
 
 .work-title{
@@ -140,7 +173,7 @@
 }
 
 .footer{
-    background: #2F303A;
+    
 }
 
 .footer-position{
@@ -164,13 +197,25 @@
 }
 
 .footer-webstudio{
-    padding: 60px 0 161px 215px;
+    padding-left: 200px;
+    padding-top: 60px;
 }
 
 .address{
-    margin-left: 175px;
-    margin-top: 20px;
+    padding-left: 160px;
 }
+
+.footer-item{
+    padding-bottom: 9px;
+}
+
+
+
+
+
+
+
+
 
 
 
