--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,27 @@
-p, h1, h2, h3, h4, h5, h6{
-    margin: 0;
-}
-
-ul, ol {
-    margin: 0;
-    padding-left: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 .btn{
+    background: #2196f3;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
     cursor: pointer;
+    border-radius: 4px;
+    padding: 10px 32px;
+    min-width: 200px;
+    margin-left: 470px;
 }
 
 .header {
@@ -16,7 +29,7 @@ ul, ol {
 }
    
 .list{
-       list-style: none;
+    list-style: none;
 }
    
 .link{
@@ -24,18 +37,17 @@ ul, ol {
 }
 
 .container{
-    width: 1600px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    margin: 0 auto;
-    outline: 2px solid red;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 2px solid tomato;
 }
+
 
 .header{
     background-color: #FFFFFF;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    
 }
 
 .header-nav{
@@ -43,22 +55,34 @@ ul, ol {
     flex-direction: row;
 }
 
+
+
 .header-list{
-    display: flex;
-   
+    display: flex; 
+    padding-top: 32px;
+    margin-left: 93px;
+    padding-bottom: 32px;
 }
 
-.header-item{
+.header-link{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    margin-right: 50px;
+    color: #212121;
+}
+
+.logo{
+    padding-top: 24px;
 }
 
 .header-hero{
     display: flex;
+    padding-top: 32px;
+    margin-left: 281px;
 }
    
 
@@ -82,29 +106,38 @@ ul, ol {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #fff;
-    padding: 200px 452px 280px 452px;
-    max-width: 696px;
+    max-width: 700px;
+    padding-top: 200px;
+    padding-bottom: 280px;
+    margin: 0 auto;
 }
    
 .begin-btn{
-       position: absolute;
-       width: 200px;
-       height: 50px;
-       left: 700px;
-       top: 430px;
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    
+    top: 430px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
 }
    
 .benefits-title{
-       font-family: 'Roboto';
-       font-style: normal;
-       font-weight: 700;
-       font-size: 14px;
-       line-height: 16px;
-       letter-spacing: 0.03em;
-       text-transform: uppercase;
-       color: #212121;
-       margin-bottom: 10px;
-       margin-top: 94px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    margin-bottom: 10px;
+    margin-top: 94px;
 }
 
 .benefits-list{
@@ -197,7 +230,7 @@ ul, ol {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.tag-start{
+.logo-start{
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
@@ -207,7 +240,7 @@ ul, ol {
     color: #2196F3;
 }
 
-.tag-end{
+.logo-end{
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
@@ -217,9 +250,7 @@ ul, ol {
     color: #000000;
 }
 
-.tag{
 
-}
   
    
 
