--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #212121;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .benefits-list{
@@ -195,7 +195,7 @@ ul {
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 
