--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -38,8 +38,6 @@ ul {
 
 .header{
     background-color: #FFFFFF;
-    border-bottom: 1px solid 
-    #ECECEC;
 }
 
 .header-nav{
@@ -51,13 +49,21 @@ ul {
     margin-right: 50px;
 }
 
+.header{
+    border-bottom: 1px solid 
+    #ECECEC;
+}
 
+.header-nav{
+    padding-top: 24px;
+    padding-bottom: 25px;
+}
 
 .header-list{
     display: flex; 
-    padding-top: 32px;
+    padding-top: 8px;
     margin-left: 93px;
-    padding-bottom: 32px;
+    
 }
 
 .header-link{
@@ -81,12 +87,12 @@ ul {
 }
 
 .logo{
-    padding-top: 24px;
+    
 }
 
 .header-hero{
     display: flex;
-    padding-top: 32px;
+    padding-top: 8px;
     margin-left: 331px;
 }
 
