--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,10 @@ ul {
    
 .begin{
     background-color: #2F303A;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/work.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    block-size: cover;
     padding-top: 200px;
     padding-bottom: 200px;
 }
