--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,7 @@ ul {
     height: 368px;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-name{
@@ -271,12 +272,25 @@ ul {
     text-align: center;
     letter-spacing: 0.03em;
     color: #757575;
-
+    margin-bottom: 16px;
 }
 
 .team-margin{
     text-align: center;
     padding: 30px;
+}
+
+.team-soc-list{
+    display: flex;
+    justify-content: center;
+}
+
+.team-soc-link{
+    width: 44px;
+    height: 44px;
+    background-color: tomato;
+    border-radius: 50%;
+    display: block;
 }
 
 .footer{
