--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ ul {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 
@@ -104,7 +104,7 @@ ul {
 .header-hero{
     display: flex;
     padding-top: 8px;
-    margin-left: 331px;
+    margin-left: auto;
 }
 
 .header-contacts:not(:last-child){
@@ -115,6 +115,12 @@ ul {
    
 .header-link:hover{
     color: #2196F3;
+}
+
+.header-icon{
+    margin-right: 10px;
+    fill: currentColor;
+    vertical-align: middle;
 }
    
 .begin{
@@ -196,6 +202,9 @@ ul {
     margin-bottom: 30px;
     width: 270px;
     height: 120px;
+    display: flex;
+   align-items: center;
+   justify-content: center;
 }
 
 .benefits-icon{
@@ -258,8 +267,6 @@ ul {
 .team-item{
     flex-basis: calc(100% / 4 - 30px);
     margin-right: 30px;
-    width: 270px;
-    height: 368px;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -298,18 +305,89 @@ ul {
     justify-content: center;
 }
 
+.team-soc-item + .team-soc-item{
+    margin-left: 10px;
+}
+
+.clients-icon{
+    fill: #AFB1B8;
+}
+
 .team-soc-link{
     width: 44px;
     height: 44px;
-    background-color: tomato;
     border-radius: 50%;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.team-soc-link:hover{
+    background-color: #2196F3;
+}
+
+.team-soc-link:hover .clients-icon{
+    fill: #FFFFFF;
+}
+
+.clients{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.clients-title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+
+.clients-list{
+    display: flex;
+    margin-top: 50px;
+}
+
+
+
+.clients-item{
+   
+}
+
+.clients-item:not(:last-child){
+    margin-right: 30px;
+}
+
+.clients-link{
+    width: 170px;
+    height: 92px;
+    
+    border: 1px solid #AFB1B8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.clients-link:hover , .clients-link:focus{
+    border-color: #2196F3;
+}
+
+.clients-link:hover .clients-icon{
+    fill: #2196F3;
 }
 
 .footer{
     background: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.footer-flex{
+    display: flex;
+    align-items: baseline;
 }
 
 .footer-logo{
@@ -340,6 +418,44 @@ ul {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+}
+
+.join{
+    margin-left: 70px;
+}
+  
+.join-title{
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-bottom: 20px ;
+}
+  
+.join-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.join-item + .join-item{
+    margin-left: 10px;
+}
+  
+.join-link{
+    width: 44px;
+    height: 44px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: #ffffff;
+}
+  
+.join-link:hover,
+.join-link:focus{
+    background-color: #2196f3;
 }
 
 .logo-start{
