--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -164,7 +164,34 @@ ul {
     flex-basis: calc(100% / 3 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
-    
+   
+}
+
+.work-item:hover .work-cover-text{
+    transform: translate(0%);
+}
+
+.masters-cover-wrap{
+    position: relative;
+    overflow: hidden;
+}
+
+.work-cover-text{
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(33, 150, 243, 0.9);
+    color: #FFFFFF;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    padding: 63px 24px 63px 24px;
+    transform: translateY(100%);
+    transition: transform 500ms;
 }
 
 .work-item:hover , .work-item:focus{
