--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,8 @@ ul {
     /* outline: 2px solid tomato; */
 }
 
+/* Header */
+
 
 .header{
     background-color: #FFFFFF;
@@ -76,6 +78,19 @@ ul {
     margin-left: 93px;
     
 }
+
+
+.active::after{
+    content: '';
+    display: block;
+    position: relative;
+    bottom: -26px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #ffffff;
+}
+
+
 
 .header-link{
     font-family: 'Roboto';
@@ -128,6 +143,8 @@ ul {
     fill: currentColor;
     vertical-align: middle;
 }
+
+/* Begin */
    
 .begin{
     background-color: #2F303A;
@@ -166,6 +183,8 @@ ul {
     letter-spacing: 0.06em;
     color: #FFFFFF;
 }
+
+/* Benefits */
 
 .benefits{
     padding-top: 94px;
@@ -220,6 +239,8 @@ ul {
    justify-content: center;
 }
 
+/* Our Works */
+
 .work{
     padding-top: 94px;
     padding-bottom: 94px;
@@ -247,7 +268,34 @@ ul {
 .work-item{
     flex-basis: calc(100% / 3 - 30px);
     margin-right: 30px;
+    position: relative;
 }
+
+.text-wrap{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(47, 48, 58, 0.8);
+    top: 224px;
+    display: block;
+    min-width: 370px;
+}
+
+.work-item-text{
+    padding-top: 27px;
+    padding-bottom: 27px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+/* Our Team */
 
 .team{
     background-color: #F5F4FA;
@@ -316,9 +364,6 @@ ul {
     margin-left: 10px;
 }
 
-.clients-icon{
-    fill: #AFB1B8;
-}
 
 .team-soc-link{
     width: 44px;
@@ -337,9 +382,15 @@ ul {
     fill: #FFFFFF;
 }
 
+/* Clients */
+
 .clients{
     padding-top: 94px;
     padding-bottom: 94px;
+}
+
+.clients-icon{
+    fill: #AFB1B8;
 }
 
 .clients-title{
@@ -385,6 +436,8 @@ ul {
 .clients-link:hover , .clients-link:focus .clients-icon{
     fill: #2196F3;
 }
+
+/* Footer */
 
 .footer{
     background: #2F303A;
@@ -495,6 +548,47 @@ ul {
     color: #FFFFFF;
 }
 
+/* Modal window */
+
+.backdrop{
+    position: fixed ;
+    top: 0;
+    width: 100vw;
+    height: 1024px;
+    background: rgba(0, 0, 0, 0.2);
+    transition: opacity 500ms, visibility 300ms;
+}
+  
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 528px;
+    min-height: 581px;
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+  
+.modal-icon-close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
 
   
    
