--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ ul {
     bottom: -26px;
     height: 4px;
     border-radius: 2px;
-    background-color: #ffffff;
+    background-color: #2196f3;
 }
 
 
