--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -21,6 +21,8 @@ ul {
 .btn{
     cursor: pointer;
     border-color: #F5F4FA;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .btn:hover , .btn:focus{
@@ -87,6 +89,8 @@ ul {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: #212121;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .header-second-link{
@@ -97,6 +101,8 @@ ul {
     line-height: 16px;
     letter-spacing: 0.02em;
     color: #757575;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .header-second-link:hover , .header-second-link:focus{
@@ -174,7 +180,8 @@ ul {
     flex-basis: calc(100% / 3 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
-   
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .work-item:hover .work-cover-text{
@@ -315,8 +322,11 @@ ul {
     justify-content: center;
     align-items: center;
     fill: #ffffff;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
-  
+
+
 .join-link:hover,
 .join-link:focus{
     background-color: #2196f3;
