--- a/css/styles.css
+++ b/css/styles.css
@@ -403,7 +403,7 @@ ul {
 }
 
 .clients-icon{
-    fill: #ffffff;
+    fill: #AFB1B8;
 }
 
 .clients-title{
@@ -435,7 +435,6 @@ ul {
 .clients-link{
     width: 170px;
     height: 92px;
-    
     border: 1px solid #AFB1B8;
     display: flex;
     align-items: center;
@@ -448,7 +447,11 @@ ul {
     border-color: #2196F3;
 }
 
-.clients-link:hover , .clients-link:focus .clients-icon{
+.clients-link:hover  .clients-icon{
+    fill: #2196F3;
+}
+
+.clients-link:focus .clients-icon{
     fill: #2196F3;
 }
 
@@ -516,6 +519,8 @@ ul {
 .join-item + .join-item{
     margin-left: 10px;
 }
+
+
   
 .join-link{
     width: 44px;
@@ -592,8 +597,8 @@ ul {
   
 .modal-icon-close{
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 8px;
+    right: 8px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     width: 30px;
