--- a/css/styles.css
+++ b/css/styles.css
@@ -575,7 +575,8 @@ ul {
 .backdrop{
     position: fixed ;
     top: 0;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.2);
     transition: opacity 500ms, visibility 300ms;
 }
