--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -19,10 +19,18 @@ ul {
 }
 
 .btn{
+    background: #2196f3;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
     cursor: pointer;
-    border-color: #F5F4FA;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+    border-radius: 4px;
+    padding: 10px 32px;
+    min-width: 200px;
+    margin-left: 485px;
+    margin-top: 30px;
 }
 
 .btn:hover , .btn:focus{
@@ -330,6 +338,57 @@ ul {
 .join-link:hover,
 .join-link:focus{
     background-color: #2196f3;
+}
+
+.subscribe{
+    margin-left: 93px;
+}
+
+.subscribe-title{
+    display: flex;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.subscribe-input{
+    padding-left: 16px;
+    width: 358px;
+    height: 50px;
+    background-color: transparent;
+    outline: none;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-input::placeholder{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-btn{
+    margin-left: 12px;
+    padding-left: 29px;
+    padding-right: 28px;
+    border-color: transparent;
+    border-radius: 4px;
+    fill: currentColor;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-send{
+    margin-left: 10px;
+    vertical-align: middle;
 }
 
 
