--- a/css/main.css
+++ b/css/main.css
@@ -34,12 +34,27 @@ ul {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
   /* outline: 2px solid tomato; */
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .backdrop {
@@ -305,29 +320,60 @@ ul {
 }
 
 .benefits {
-  padding-top: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .benefits {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .benefits-title {
+  max-width: 450px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 16/14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
   margin-bottom: 10px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .benefits-title {
+    max-width: 354px;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits-title {
+    max-width: 270px;
+  }
 }
 
-.benefits-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .benefits-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: -30px;
+    margin-right: -30px;
+  }
 }
 
 .benefits-item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .benefits-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .benefits-text {
@@ -335,17 +381,27 @@ ul {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 24/14;
   letter-spacing: 0.03em;
   color: #757575;
-  max-width: 270px;
+  max-width: 450px;
+}
+@media screen and (min-width: 768px) {
+  .benefits-text {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .benefits-text {
+    max-width: 270px;
+  }
 }
 
 .background-icon {
   background-color: #F5F4FA;
   border-radius: 4px;
   margin-bottom: 30px;
-  width: 270px;
+  max-width: 450px;
   height: 120px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -356,6 +412,16 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .background-icon {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .background-icon {
+    max-width: 270px;
+  }
 }
 
 .benefits-icon {
@@ -770,14 +836,17 @@ ul {
 
 .team {
   background-color: #F5F4FA;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-
-.team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .team-title {
@@ -884,8 +953,16 @@ ul {
 }
 
 .work {
+  display: none;
   padding-top: 94px;
   padding-bottom: 94px;
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .work__title {
