--- a/sass/styles.scss/layout/_benefits.scss
+++ b/sass/styles.scss/layout/_benefits.scss
@@ -1,26 +1,48 @@
 .benefits{
-    padding-top: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and (min-width:1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
    
 .benefits-title{
+    max-width: 450px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 16/14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #212121;
     margin-bottom: 10px;
+    text-align: center;
+    @media screen and (min-width:768px) {
+        max-width: 354px;
+        text-align: left;
+    }
+    @media screen and (min-width:1200px) {
+        max-width: 270px;
+    }
 }
 
 .benefits-list{
-    display: flex;
+    @media screen and (min-width:768px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: -30px;
+        margin-right: -30px;
+    }
 }
 
 
 .benefits-item:not(:last-child){
-    margin-right: 30px;
+    margin-bottom: 30px;
+    @media screen and (min-width:768px) {
+        margin-right: 30px;
+    }
 }
    
 .benefits-text{
@@ -28,21 +50,36 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 24/14;
     letter-spacing: 0.03em;
     color: #757575;
-    max-width: 270px;
+    max-width: 450px;
+   @media screen and (min-width:768px) {
+        max-width: 354px;
+    }
+    
+    @media screen and (min-width:768px) {
+        max-width: 270px;
+    }
+
 }
 
 .background-icon{
     background-color: #F5F4FA;
     border-radius: 4px;
     margin-bottom: 30px;
-    width: 270px;
+    max-width: 450px;
     height: 120px;
     display: flex;
-   align-items: center;
-   justify-content: center;
+    align-items: center;
+    justify-content: center;
+    @media screen and (min-width:768px) {
+        max-width: 354px;
+    }
+    @media screen and (min-width:1200px) {
+        max-width: 270px;
+    }
+
 }
 
 .benefits-icon{
