--- a/sass/styles.scss/layout/_team.scss
+++ b/sass/styles.scss/layout/_team.scss
@@ -1,11 +1,17 @@
 .team{
     background-color: #F5F4FA;
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and (min-width:768px) {
+
+    }
 }
 
 .team-list{
-    display: flex;
+    @media screen and (min-width:768px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .team-title{
