--- a/sass/styles.scss/layout/_works.scss
+++ b/sass/styles.scss/layout/_works.scss
@@ -1,4 +1,8 @@
 .work{
+    display: none;
+    @media screen and (min-width:1200px) {
+        display: flex;
+    }
     padding-top: 94px;
     padding-bottom: 94px;
 }   
