--- a/css/main.css
+++ b/css/main.css
@@ -345,7 +345,7 @@ ul {
 }
 @media screen and (min-width: 768px) {
   .benefits-title {
-    max-width: 354px;
+    min-width: 354px;
     text-align: left;
   }
 }
