--- a/sass/styles.scss/layout/_benefits.scss
+++ b/sass/styles.scss/layout/_benefits.scss
@@ -20,7 +20,7 @@
     margin-bottom: 10px;
     text-align: center;
     @media screen and (min-width:768px) {
-        max-width: 354px;
+        min-width: 354px;
         text-align: left;
     }
     @media screen and (min-width:1200px) {
