--- a/css/main.css
+++ b/css/main.css
@@ -345,13 +345,13 @@ ul {
 }
 @media screen and (min-width: 768px) {
   .benefits-title {
-    min-width: 354px;
+    width: 354px;
     text-align: left;
   }
 }
 @media screen and (min-width: 1200px) {
   .benefits-title {
-    max-width: 270px;
+    width: 270px;
   }
 }
 
@@ -388,12 +388,12 @@ ul {
 }
 @media screen and (min-width: 768px) {
   .benefits-text {
-    max-width: 354px;
+    width: 354px;
   }
 }
 @media screen and (min-width: 768px) {
   .benefits-text {
-    max-width: 270px;
+    width: 270px;
   }
 }
 
@@ -415,12 +415,12 @@ ul {
 }
 @media screen and (min-width: 768px) {
   .background-icon {
-    max-width: 354px;
+    width: 354px;
   }
 }
 @media screen and (min-width: 1200px) {
   .background-icon {
-    max-width: 270px;
+    width: 270px;
   }
 }
 
@@ -839,6 +839,13 @@ ul {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .team-list {
     display: -webkit-box;
@@ -862,13 +869,33 @@ ul {
 }
 
 .team-item {
+  max-width: 450px;
   -ms-flex-preferred-size: calc(25% - 30px);
       flex-basis: calc(25% - 30px);
-  margin-right: 30px;
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 768px) {
+  .team-item {
+    width: 354px;
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-item {
+    width: 270px;
+    -ms-flex-preferred-size: calc(25% - 30px);
+        flex-basis: calc(25% - 30px);
+  }
+}
+
+.team-item:nth-child(2n) {
+  margin-right: -30px;
 }
 
 .team-name {
@@ -893,6 +920,10 @@ ul {
   letter-spacing: 0.03em;
   color: #757575;
   margin-bottom: 16px;
+}
+
+.team-img {
+  width: 100%;
 }
 
 .team-margin {
