--- a/sass/styles.scss/layout/_team.scss
+++ b/sass/styles.scss/layout/_team.scss
@@ -2,8 +2,9 @@
     background-color: #F5F4FA;
     padding-top: 60px;
     padding-bottom: 60px;
-    @media screen and (min-width:768px) {
-
+    @media screen and (min-width:1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
     }
 }
 
@@ -27,12 +28,31 @@
 }
 
 .team-item{
+    max-width: 450px;
     flex-basis: calc(100% / 4 - 30px);
-    margin-right: 30px;
+    
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+    @media screen and (min-width:768px) {
+        width: 354px;
+        flex-basis: calc(100% / 2 - 30px);
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+     
+    @media screen and (min-width:1200px) {
+        width: 270px;
+        flex-basis: calc(100% / 4 - 30px);
+    }
 }
+
+.team-item:nth-child(2n){
+    margin-right: -30px;
+    
+}
+
 
 .team-name{
     font-family: 'Roboto';
@@ -56,6 +76,10 @@
     letter-spacing: 0.03em;
     color: #757575;
     margin-bottom: 16px;
+}
+
+.team-img{
+    width: 100%;
 }
 
 .team-margin{
