--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./styles.scss/components/btn";
 @import "./styles.scss/components/container";
 @import "./styles.scss/components/modal";
+@import "./styles.scss/components/mob-menu";
 //////////////////////////
 @import "./styles.scss/layout/begin";
 @import "./styles.scss/layout/benefits";
@@ -15,6 +16,7 @@
 @import "./styles.scss/layout/works";
 /////////////////////////
 @import "./styles.scss/utils/hidden";
+@import "./styles.scss/utils/vars";
 
 
 
