--- a/sass/styles.scss/layout/_footer.scss
+++ b/sass/styles.scss/layout/_footer.scss
@@ -5,13 +5,22 @@
 }
 
 .footer-flex{
-    display: flex;
-    align-items: baseline;
+    @media screen and (min-width:768px){
+        display: flex;
+        align-items: baseline;
+        justify-content: space-around;
+        margin-bottom: 60px;
+    }
+    @media screen and (min-width:1200px){
+
+    }
+    
 }
 
 .footer-logo{
     display: block;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .footer-position{
@@ -40,7 +49,16 @@
 }
 
 .join{
-    margin-left: 70px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    @media screen and (min-width:768px){
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    @media screen and (min-width:1200px){
+        margin-left: 70px;
+    }
+    
 }
   
 .join-title{
@@ -52,7 +70,7 @@
 }
   
 .join-list{
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
 }
@@ -68,7 +86,7 @@
     height: 44px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     fill: #ffffff;
@@ -85,11 +103,14 @@
 
 
 .subscribe{
-    margin-left: auto;
+    @media screen and (min-width:1200px){
+       margin-left: auto; 
+    }
+    
 }
 
 .subscribe-title{
-    display: flex;
+    display: block;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -99,10 +120,13 @@
     text-transform: uppercase;
     color: #FFFFFF;
     margin-bottom: 20px;
+    @media screen and (min-width:1200px){
+        text-align: left;
+    }
 }
 
 .subscribe-cont{
-    display: flex;
+    display: block;
 }
 
 
