--- a/css/main.css
+++ b/css/main.css
@@ -362,10 +362,26 @@ ul {
 }
 
 .mob-menu-contacts__link {
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
   color: #757575;
 }
 .mob-menu-contacts__link:hover, .mob-menu-contacts__link:focus {
   color: #2196F3;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
 }
 
 .mob-menu-soc__list {
@@ -528,7 +544,7 @@ ul {
     width: 354px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .benefits-text {
     width: 270px;
   }
@@ -668,7 +684,7 @@ ul {
 }
 @media screen and (min-width: 768px) {
   .clients-link {
-    width: 226px;
+    max-width: 226px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -696,10 +712,26 @@ ul {
     margin-bottom: 60px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
 .footer-logo {
   display: block;
   margin-bottom: 20px;
   text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-logo {
+    text-align: left;
+  }
 }
 
 .footer-position {
@@ -710,11 +742,12 @@ ul {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #FFFFFF;
+  display: block;
+  text-align: center;
 }
 
-.footer-item {
-  display: block;
-  margin-bottom: 9px;
+.footer-item:not(:last-child) {
+  margin-bottom: 8px;
 }
 
 .footer-link {
@@ -725,6 +758,8 @@ ul {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  display: block;
 }
 
 .join {
@@ -749,10 +784,13 @@ ul {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .join-list {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -770,7 +808,9 @@ ul {
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -807,6 +847,7 @@ ul {
   text-transform: uppercase;
   color: #FFFFFF;
   margin-bottom: 20px;
+  text-align: center;
 }
 @media screen and (min-width: 1200px) {
   .subscribe-title {
@@ -819,14 +860,14 @@ ul {
 }
 
 .subscribe-input {
-  padding-left: 16px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   outline: none;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 20px;
 }
 .subscribe-input::-webkit-input-placeholder {
   font-family: "Roboto";
@@ -868,22 +909,30 @@ ul {
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
+@media screen and (min-width: 768px) {
+  .subscribe-input {
+    display: block;
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-input {
+    display: inline;
+    padding-left: 16px;
+    width: 358px;
+  }
+}
 
 .subscribe-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   padding-left: 29px;
   padding-right: 28px;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 12px;
   background: #2196f3;
   color: #ffffff;
   font-weight: 700;
@@ -897,9 +946,43 @@ ul {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+@media screen and (min-width: 1200px) {
+  .subscribe-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 29px;
+    padding-right: 28px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 12px;
+  }
+}
 
 .subscribe-send {
-  margin-left: 10px;
+  vertical-align: middle;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-send {
+    margin-left: 10px;
+  }
+}
+
+.logo-footer-start {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #2196F3;
 }
 
 .logo-footer-end {
@@ -931,25 +1014,28 @@ ul {
 }
 
 .nav {
-  padding-top: 24px;
-  padding-bottom: 25px;
   display: none;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+}
+@media screen and (min-width: 768px) {
+  .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
-.header-list {
-  display: none;
-}
 @media screen and (min-width: 768px) {
   .header-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding-top: 8px;
-    margin-left: 93px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-left: 88px;
   }
 }
 
@@ -987,8 +1073,8 @@ ul {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 12px;
+  line-height: 1.17px;
   letter-spacing: 0.02em;
   color: #757575;
   -webkit-transition-duration: 250ms;
@@ -1004,21 +1090,20 @@ ul {
 }
 
 .connect {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 8px;
-  margin-left: auto;
-}
-
-.connect__contacts:not(:last-child) {
-  margin-right: 50px;
+  display: block;
+  padding-top: 21px;
+  margin-left: 84px;
 }
 
 .connect__icon {
-  margin-right: 10px;
+  margin-right: 8px;
   fill: currentColor;
   vertical-align: middle;
+}
+@media screen and (min-width: 1200px) {
+  .connect__icon {
+    margin-right: 10px;
+  }
 }
 
 .logo {
@@ -1085,15 +1170,13 @@ ul {
 
 .team-item {
   max-width: 450px;
-  -ms-flex-preferred-size: calc(25% - 30px);
-      flex-basis: calc(25% - 30px);
   margin-bottom: 30px;
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-item {
     width: 354px;
     -ms-flex-preferred-size: calc(50% - 30px);
@@ -1101,17 +1184,26 @@ ul {
     margin-right: 30px;
     margin-bottom: 30px;
   }
+  .team-item:nth-child(2n) {
+    margin-right: -30px;
+  }
+  .team-item:nth-child(3) {
+    margin-bottom: 0px;
+  }
+  .team-item:nth-child(4) {
+    margin-bottom: 0px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .team-item {
+    margin-right: 30px;
     width: 270px;
     -ms-flex-preferred-size: calc(25% - 30px);
         flex-basis: calc(25% - 30px);
   }
-}
-
-.team-item:nth-child(4) {
-  margin-right: -30px;
+  .team-item:nth-child(4) {
+    margin-right: -30px;
+  }
 }
 
 .team-name {
@@ -1139,7 +1231,7 @@ ul {
 }
 
 .team-img {
-  width: 100%;
+  max-width: 354px;
 }
 
 .team-margin {
@@ -1283,464 +1375,4 @@ ul {
   -webkit-clip-path: inset(50%);
           clip-path: inset(50%);
   margin: -1px;
-}
-
-.header {
-  background-color: #FFFFFF;
-}
-
-.header-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.active::after {
-  content: "";
-  display: block;
-  position: relative;
-  bottom: -26px;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
-}
-
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header {
-  border-bottom: 1px solid #ECECEC;
-}
-
-.header-nav {
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.header-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 8px;
-  margin-left: 93px;
-}
-
-.header-link {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #212121;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header-link:hover {
-  background-color: #2196f3;
-}
-.header-link:focus {
-  background-color: #2196f3;
-}
-
-.header-second-link {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: #757575;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header-second-link:hover {
-  background-color: #2196f3;
-}
-.header-second-link:focus {
-  background-color: #2196f3;
-}
-
-.header-hero {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 8px;
-  margin-left: auto;
-}
-
-.header-contacts:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-icon {
-  margin-right: 10px;
-  fill: currentColor;
-  vertical-align: middle;
-}
-
-.logo-start {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #2196F3;
-}
-
-.logo-end {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.section-main-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 50px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.section-list-item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.btn-item {
-  font-family: "Roboto";
-  font-style: normal;
-  background: #f5f4fa;
-  color: #212121;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  padding-top: 6px;
-  padding-right: 22px;
-  padding-bottom: 6px;
-  padding-left: 22px;
-  border-radius: 4px;
-  border: #f5f4fa;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn-item:hover {
-  background-color: #2196f3;
-  color: #FFFFFF;
-}
-.btn-item:focus {
-  background-color: #2196f3;
-  color: #FFFFFF;
-}
-
-.work-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.work-item {
-  -ms-flex-preferred-size: calc(33.3333333333% - 30px);
-      flex-basis: calc(33.3333333333% - 30px);
-  margin-right: 30px;
-  margin-bottom: 30px;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.work-item:hover {
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.work-item:focus {
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.masters-cover-wrap {
-  position: relative;
-  overflow: hidden;
-}
-
-.work-cover-text {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(33, 150, 243, 0.9);
-  color: #FFFFFF;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  padding: 63px 24px 63px 24px;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  -webkit-transition: -webkit-transform 500ms;
-  transition: -webkit-transform 500ms;
-  transition: transform 500ms;
-  transition: transform 500ms, -webkit-transform 500ms;
-}
-.work-item:hover .work-cover-text {
-  -webkit-transform: translate(0%);
-          transform: translate(0%);
-}
-
-.third {
-  margin-right: -30px;
-}
-
-.work-text {
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
-  border-bottom: 1px solid #EEEEEE;
-  padding-top: 20px;
-  padding-right: 24px;
-  padding-bottom: 20px;
-  padding-left: 24px;
-}
-
-.work-title {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: #212121;
-  margin-bottom: 4px;
-}
-
-.work-category {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.footer {
-  background: #2F303A;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.footer-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-
-.footer-logo {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.footer-position {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #FFFFFF;
-}
-
-.footer-item {
-  display: block;
-  margin-bottom: 9px;
-}
-
-.footer-link {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.join {
-  margin-left: 70px;
-}
-
-.join-title {
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.join-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.join-item + .join-item {
-  margin-left: 10px;
-}
-
-.join-link {
-  width: 44px;
-  height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  fill: #ffffff;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.join-link:hover {
-  background-color: #2196f3;
-}
-.join-link:focus {
-  background-color: #2196f3;
-}
-
-.subscribe {
-  margin-left: 93px;
-}
-
-.subscribe-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-}
-
-.subscribe-input {
-  padding-left: 16px;
-  width: 358px;
-  height: 50px;
-  background-color: transparent;
-  outline: none;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input::-webkit-input-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input::-moz-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input:-ms-input-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input::-ms-input-placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input::placeholder {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscribe-btn {
-  margin-left: 12px;
-  padding-left: 29px;
-  padding-right: 28px;
-  border-color: transparent;
-  border-radius: 4px;
-  fill: currentColor;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-
-.subscribe-send {
-  margin-left: 10px;
-  vertical-align: middle;
-}
-
-.logo-footer-end {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #FFFFFF;
 }/*# sourceMappingURL=main.css.map */
