--- a/sass/styles.scss/layout/_clients.scss
+++ b/sass/styles.scss/layout/_clients.scss
@@ -72,7 +72,7 @@
     }
 
     @media screen and (min-width:768px){
-        width: 226px;
+        max-width: 226px;
     }
     @media screen and (min-width:1200px){
         width: 170px;
