--- a/sass/styles.scss/layout/_footer.scss
+++ b/sass/styles.scss/layout/_footer.scss
@@ -12,7 +12,8 @@
         margin-bottom: 60px;
     }
     @media screen and (min-width:1200px){
-
+        display: flex;
+        align-items: baseline;
     }
     
 }
@@ -21,6 +22,9 @@
     display: block;
     margin-bottom: 20px;
     text-align: center;
+    @media screen and (min-width:1200px){
+        text-align: left;
+    }
 }
 
 .footer-position{
@@ -31,11 +35,17 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #FFFFFF;
+    display: block;
+    text-align: center;
 }
 
 .footer-item {
-    display: block;
-    margin-bottom: 9px;
+    // display: block;
+    // margin-bottom: 9px;
+}
+
+.footer-item:not(:last-child){
+    margin-bottom: 8px;
 }
 
 .footer-link{
@@ -46,6 +56,8 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    text-align: center ;
+    display: block;
 }
 
 .join{
@@ -67,10 +79,11 @@
     text-transform: uppercase;
     color: #ffffff;
     margin-bottom: 20px ;
+    text-align: center;
 }
   
 .join-list{
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -86,7 +99,7 @@
     height: 44px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
     fill: #ffffff;
@@ -120,6 +133,7 @@
     text-transform: uppercase;
     color: #FFFFFF;
     margin-bottom: 20px;
+    text-align: center;
     @media screen and (min-width:1200px){
         text-align: left;
     }
@@ -131,14 +145,15 @@
 
 
 .subscribe-input{
-    padding-left: 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
     background-color: transparent;
     outline: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     color: rgba(255, 255, 255, 0.6);
+    margin-bottom: 20px;
+    
     &::placeholder{
         font-family: 'Roboto';
         font-style: normal;
@@ -146,20 +161,33 @@
         font-size: 16px;
         line-height: 1.25;
         color: rgba(255, 255, 255, 0.6);
+        
+    }
+
+    @media screen and (min-width:768px) {
+        display: block;
+        width: 450px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media screen and (min-width:1200px){
+        display: inline;
+        padding-left: 16px;
+        width: 358px;
     }
 }
 
 
 
 .subscribe-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 29px;
     padding-right: 28px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-left: 12px;
     background: #2196f3;
     color: #ffffff;
     font-weight: 700;
@@ -171,15 +199,36 @@
     border-radius: 4px;
     fill: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    @media screen and (min-width:1200px){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 29px;
+        padding-right: 28px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-left: 12px;
+    }
     
 }
 
 .subscribe-send{
-    margin-left: 10px;
-    
+    vertical-align: middle;
+    @media screen and (min-width:1200px){
+        margin-left: 10px;
+    }
 }
 
-
+.logo-footer-start{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+}
 
 .logo-footer-end{
     font-family: 'Raleway';
