--- a/sass/styles.scss/layout/_header.scss
+++ b/sass/styles.scss/layout/_header.scss
@@ -16,18 +16,20 @@
 
 
 .nav{
-    padding-top: 24px;
-    padding-bottom: 25px;
     display: none;
-    flex-direction: row;
+    
+    @media screen and (min-width:768px) {
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 .header-list{
-    display: none;
     @media screen and (min-width:768px) {
         display: flex;
-        padding-top: 8px;
-        margin-left: 93px;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        margin-left: 88px;
     }
 }
 
@@ -66,8 +68,8 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 12px;
+    line-height: 1.17px;
     letter-spacing: 0.02em;
     color: #757575;
     transition-duration: 250ms;
@@ -83,22 +85,25 @@
 
 
 .connect{
-    display: flex;
-    padding-top: 8px;
-    margin-left: auto;
+    display: block;
+    padding-top: 21px;
+    margin-left: 84px;
 }
 
-.connect__contacts:not(:last-child){
-    margin-right: 50px;
-}
+// .connect__contacts:not(:last-child){
+//     margin-right: 50px;
+// }
    
 
 
 
 .connect__icon{
-    margin-right: 10px;
+    margin-right: 8px;
     fill: currentColor;
     vertical-align: middle;
+    @media screen and (min-width:1200px) {
+        margin-right: 10px;
+    }
 }
 
 .logo{
@@ -110,6 +115,7 @@
     font-size: 24px;
     line-height: 1.16;
     letter-spacing: 0.03em;
+    
     @media screen and (min-width:1200px) {
         font-weight: 700;
         font-size: 24px;
