--- a/sass/styles.scss/layout/_team.scss
+++ b/sass/styles.scss/layout/_team.scss
@@ -29,30 +29,38 @@
 
 .team-item{
     max-width: 450px;
-    flex-basis: calc(100% / 4 - 30px);
     margin-bottom: 30px;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     
-    @media screen and (min-width:768px) {
+    @media screen and (min-width:768px) and (max-width:1199px) {
         width: 354px;
         flex-basis: calc(100% / 2 - 30px);
         margin-right: 30px;
         margin-bottom: 30px;
+        &:nth-child(2n){
+            margin-right: -30px;
+        }
+        &:nth-child(3){
+            margin-bottom: 0px;
+        }
+        &:nth-child(4){
+            margin-bottom: 0px;
+        }
     }
      
     @media screen and (min-width:1200px) {
+        margin-right: 30px;
         width: 270px;
         flex-basis: calc(100% / 4 - 30px);
-
+        &:nth-child(4){
+            margin-right: -30px;
+        }
     }
 }
 
-.team-item:nth-child(4){
-    margin-right: -30px;
-    
-}
+
 
 
 .team-name{
@@ -80,7 +88,7 @@
 }
 
 .team-img{
-    width: 100%;
+    max-width: 354px;
 }
 
 .team-margin{
